--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>001 QR Code Component</title>
     <script type="module" src="./style.scss"></script>
   </head>
   <body>
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+    <main>
+      <article class="card">
+        <div class="card__img-wrapper">
+          <img class="card__img" src="./images/image-equilibrium.jpg" alt="NFT picture" />
+        </div>
+        <h1 class="card__title"><a href="#nft">Equilibrium #3429</a></h1>
+        <p class="card__desc">Our Equilibrium collection promotes balance and calm.</p>
+        <div class="card__info">
+          <p class="card__price">0.041 ETH</p>
+          <p class="card__time-left">3 days left</p>
+        </div>
+        <hr class="card__divider" />
+        <footer class="card__attribution">
+          <img class="card__avatar" src="./images/image-avatar.png" alt="Avatar" />
+          <p class="card__author-desc">Creation of <a href="#author">Jules Wyvern</a></p>
+        </footer>
+      </article>
+    </main>
   </body>
 </html>
