--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>004 NFT Preview card component</title>
     <script type="module" src="./style.scss"></script>
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+        margin-top: 1rem;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
   </head>
   <body>
     <main>
@@ -28,6 +38,10 @@
           <p class="card__author-desc">Creation of <a href="#author">Jules Wyvern</a></p>
         </footer>
       </article>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+        <a href="https://github.com/MehdiSaffar">Mehdi Saffar</a>.
+      </div>
     </main>
   </body>
 </html>
